# defensive_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conan.bat  conan.sh  conanfile.txt
cmake/: defensiveConfig.cmake.in
include/defensive/: defensive.hpp
src/: defensive.hpp  main.cpp
tests/: main.cpp
